src/styles/bloks/footer.scss
.footer {
  background-color: #1c1a26;
  padding: 90px 0;

  &__title {
    font-family: "Inter", sans-serif;
    font-style: normal;
    font-size: 56px;
    line-height: 85%;
    text-align: left;
    letter-spacing: -5%;
    color: #fff;
    margin-bottom: 40px;

    @include onTablet {
      font-size: 72px;
    }
  }

  &__logo {
    display: block;
    width: 157px;
    height: 30px;
    margin-bottom: 45px;

    @include onTablet {
      margin-bottom: 65px;
    }
  }

  &__contact-us-telephone {
    margin-bottom: 64px;

    @include onTablet {
      margin-bottom: 48px;
    }
  }

  &__bakerlab {
    margin-bottom: 42px;

    @include onTablet {
      margin-bottom: 104px;
    }

    @include onDesktop {
      margin-bottom: 48px;
    }
  }

  &__contact-us-email {
    margin-bottom: 40px;
  }

  &__watermark {
    font-size: 16px;
    line-height: 150%;
    text-align: left;
    letter-spacing: -1%;
    color: #7f8096;
  }

  &__list-title {
    text-transform: uppercase;
    font-family: "Inter", sans-serif;
    font-style: normal;
    font-size: 16px;
    line-height: 100%;
    margin-bottom: 16px;
    text-align: left;
    letter-spacing: 2%;
    color: #7f8096;
  }

  &__item {
    list-style: none;
    margin-bottom: 16px;
  }

  &__link {
    text-decoration: none;
    list-style: none;
    font-family: "Inter", sans-serif;
    font-style: normal;
    font-size: 16px;
    line-height: 150%;
    text-align: left;
    letter-spacing: -1%;
    color: #fff;
  }

  &__icons {
    display: flex;
    gap: 40px;
    margin-bottom: 40px;
  }

  &__icon {
    display: block;
    background-size: cover;
    background-position: center;
    background-repeat: no-repeat;
    width: 20px;
    height: 16px;
    transition: all 0.3s;

    &-face {
      background-image: url(../images/facebook.svg);

      &:focus,
      &:hover {
        background-image: url(../images/facebook_hovered.svg);
      }
    }

    &-inst {
      background-image: url(../images/insta.svg);

      &:focus,
      &:hover {
        background-image: url(../images/insta_hovered.svg);
      }
    }

    &-twit {
      background-image: url(../images/twit.svg);

      &:focus,
      &:hover {
        background-image: url(../images/twit_hovered.svg);
      }
    }
  }
}

